syntax = "proto3";

import "google/protobuf/timestamp.proto";

enum ChangeType {
  CREATE = 0;
  DELETE = 1;
  UPDATE = 2;
}

message CreationInput {
  string new_file_name    = 1;
  string new_file_content = 2;
}

message DeletionInput {
  string file_name = 1;
}

message UpdateInput {
  string existing_file_name = 1;
  string diff_content       = 2;
}

message ChangeRecord {
  ChangeType type = 1;

  oneof change_data {
    CreationInput create_data = 4;
    DeletionInput delete_data = 5;
    UpdateInput   update_data = 6;
  }
}

message ChangeRecordId {
  string hash = 1;
  google.protobuf.Timestamp preparation_time = 2;
}

message ChangeRecords {
  ChangeRecordId id                = 1;
  string description               = 2;
  repeated ChangeRecord records    = 3;
  repeated string files_to_index   = 4;
  repeated string files_to_unindex = 5;
}

message ChangeIndex {
  repeated ChangeRecordId ids = 1;
}

